--- a/homework/week18/capitals-in-the-world/index.html
+++ b/homework/week18/capitals-in-the-world/index.html
@@ -7,6 +7,12 @@
 		<title>Test</title>
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<h1>Europe Capital API</h1>
+		<input class="country-input" type="text" placeholder="Enter country..." />
+		<button class="btn-capital">Get capital</button>
+		<h2 class="country"></h2>
+		<p class="capital"></p>
+
+		<script src="./index.js"></script>
 	</body>
 </html>
